Fixing dropdown styles to show all items. The main hindrance is that you cannot set overflow-x to visible and overflow-y to auto or scroll, and vice versa.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2,7 +2,7 @@
 @import 'header';
 @import 'mirador_ext/mirador';
 @import 'mirador_ext/grid';
-@import 'mirador_ext/annotation_dialog';
+@import 'mirador_ext/annotation_editor';
 @import 'mirador_ext/annotation_window/annotation_window';
 @import 'mirador_ext/annotation_window/annotation_cell';
 
@@ -24,13 +24,6 @@ html, body, div, p {
   min-height: 1em;
   min-width: 125px;
   white-space: nowrap;
-}
-
-.ui.dropdown .menu {
-  // Setting max-height and overflow
-  // to prevent part of menu from being hidden when overflowing the containing element
-  max-height: 300px; 
-  overflow: scroll;
 }
 
 .dropdown.icon {
