--- a/app/assets/stylesheets/mirador_ext/annotation_window/annotation_window.less
+++ b/app/assets/stylesheets/mirador_ext/annotation_window/annotation_window.less
@@ -6,6 +6,7 @@
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow-y: scroll; // to show the menu-tag selector when it gets too big
   background-color: #efefef;
 }
 
